     during runtime, thereby reducing the RAM/ROM footprint by ~6kb. Suggested
     and contributed by jkivilin in #394.
   * Add initial support for Curve448 (RFC 7748). Only mbedtls_ecp_mul() and
     ECDH primitive functions (mbedtls_ecdh_gen_public(),
     mbedtls_ecdh_compute_shared()) are supported for now. Contributed by
     Nicholas Wilson (#348).

API Changes
   * Add function mbedtls_net_poll to public API allowing to wait for a
     network context to become ready for reading or writing.
   * Add function mbedtls_ssl_check_pending to public API allowing to check
     if more data is pending to be processed in the internal message buffers.
     This function is necessary to determine when it is safe to idle on the
     underlying transport in case event-driven IO is used.

Bugfix
   * Fix spurious uninitialized variable warning in cmac.c. Fix independently
     contributed by Brian J Murray and David Brown.
   * Add missing dependencies in test suites that led to build failures
     in configurations that omit certain hashes or public-key algorithms.
     Fixes #1040.
   * Fix C89 incompatibility in benchmark.c. Contributed by Brendan Shanks.
     #1353
   * Add missing dependencies for MBEDTLS_HAVE_TIME_DATE and
     MBEDTLS_VERSION_FEATURES in test suites. Contributed by Deomid Ryabkov.
     Fixes #1299, #1475.
   * Fix dynamic library building process with Makefile on Mac OS X. Fixed by
     mnacamura.
   * Fix parsing of PKCS#8 encoded Elliptic Curve keys. Previously Mbed TLS was
     unable to parse keys with only the optional parameters field of the
     ECPrivateKey structure. Found by Jethro Beekman, fixed in #1379.
   * Return plaintext data sooner on unpadded CBC decryption, as stated in
     the mbedtls_cipher_update() documentation. Contributed by Andy Leiserson.
   * Fix overriding and ignoring return values when parsing and writing to
     a file in pk_sign program. Found by kevlut in #1142.